--- a/assignment2/about/css/the-big-picture.css
+++ b/assignment2/about/css/the-big-picture.css
@@ -10,10 +10,44 @@ body {
 	background: none;
 }
 
-.full {
-  background: url(../css/images/shell1.jpg) no-repeat center center fixed; 
+/*.full {
+  background: url(../css/images/mediaman.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+}*/
+
+@import "compass/css3";
+
+@-webkit-keyframes fade-in {
+  0%   { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+.background-image {
+  background: url('../css/images/mediaman.jpg') no-repeat center center fixed;
+  
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  
+  opacity: 0;
+  
+  -webkit-animation-name: fade-in;
+  -webkit-animation-duration: 1s;
+  -webkit-animation-timing-function: ease-in;
+  -webkit-animation-iteration-count: 1;
+  -webkit-animation-delay: 2s;
+}
+
+.background-image.visible {
+  opacity: 1;
 }
