--- a/assignment1/assets/css/style.css
+++ b/assignment1/assets/css/style.css
@@ -188,3 +188,15 @@ footer {
 	font-size: 10px;
 	color: #ffffff;
 }
+
+@media screen and (max-width: 980px) { 
+	
+}
+
+@media screen and (max-width: 768px) {
+	
+}
+
+@media screen and (max-width: 640px) {
+	
+}
