--- a/assignment1/assets/css/style.css
+++ b/assignment1/assets/css/style.css
@@ -280,6 +280,11 @@ footer {
 		width: 265px;
 		text-align: left;
 	}
+
+	input {
+		size="55"
+	}
+	}
 }
 
 @media screen and (max-width: 640px) {
