--- a/assignment1/assets/css/style.css
+++ b/assignment1/assets/css/style.css
@@ -167,11 +167,19 @@ form {
 	height: 350px;
 }
 
+.formArea {
+	width: 100%;
+}
+
 .form {
 	display: block;
 	margin:10px 0px;
 	font-family: Arial Helvetica sans-serif;
 	color: #cccccc;
+}
+
+.input {
+	display: relative;
 }
 
 .submit {
@@ -280,10 +288,6 @@ footer {
 		width: 265px;
 		text-align: left;
 	}
-
-	input {
-		size="55"
-	}
 	
 }
 
@@ -330,6 +334,10 @@ footer {
 	.bannerPort {
 		width: 300px;
 		margin-top: 205px;
+	}
+
+	input {
+		size: 55%;
 	}
 	
 }
