some formatt errors

--- a/assignment2.2/css/style.css
+++ b/assignment2.2/css/style.css
@@ -2,16 +2,12 @@ body {
 	background-image: url('images/ricepaper_v3.png');
 }
 
-/*.navFont {
-	color: #4aaaa5;
-}*/
-
-.navBackgroundColor {
+/*.navBackgroundColor {
 	background-color: #4aaaa5;
 	color: #ffffff;
 }
 
 .navFont {
 	color: #ffffff;
-}
+}*/
 
